feat: 添加执行边界记录并增强运行时事实集
refactor(WorkerExecutorRouter): 支持 provider-app-server 执行路径
feat(RuntimeFactSet): 新增 ExecutionBoundary 记录执行过程元数据
feat(TaskService): 集成执行边界数据到任务视图
test: 添加执行边界相关测试用例
style: 优化 mounted context 提示渲染的边界处理